-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0
-
None
-
CentOS 7.0, Qt-5.6.0, gcc-4.8.3, libdrm-2.4.56, mesa-10.2.7
I run qt opengl example under platform eglfs without X Window System.
And if mesa-10.2.7 is installed the application is falling down with floating-point exception.
This happens because in QEglFSKmsCursor constructor the function gbm_bo_create return NULL (qeglfskmscursor.cpp:74), but the pointer m_bo is used in the function changeCursor without verification.
If mesa has been updated to version 11.0.0 (and libdrm to 2.4.67) this bug doesn't appear.
The attached path will solve this problem.
| For Gerrit Dashboard: QTBUG-52404 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 155261,2 | Fix FPE under EGLFS_KMS if mesa-10.2.7 | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |