src/plugins/platforms/eglfs/deviceintegration/eglfs_kms/qeglfskmscursor.cpp
@@ -100,8 +100,10 @@ QEglFSKmsCursor::~QEglFSKmsCursor()
         drmModeMoveCursor(kmsScreen->device()->fd(), kmsScreen->output().crtc_id, 0, 0);
     }
 
-    gbm_bo_destroy(m_bo);
-    m_bo = Q_NULLPTR;
+    if (m_bo) {
+        gbm_bo_destroy(m_bo);
+        m_bo = Q_NULLPTR;
+    }
 }
 
 void QEglFSKmsCursor::pointerEvent(const QMouseEvent &event)
@@ -113,6 +115,9 @@ void QEglFSKmsCursor::pointerEvent(const QMouseEvent &event)
 void QEglFSKmsCursor::changeCursor(QCursor *windowCursor, QWindow *window)
 {
     Q_UNUSED(window);
+
+    if (!m_bo)
+        return;
 
     if (!m_visible)
         return;
